/*
 * $Id: ChangeLog,v 1.4470 2005/10/16 12:04:30 druzus Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-10-16 21:30 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/hbserv.c
    * formatting

  * xharbour/source/rtl/win32ole.prg
    ! fixed compilation for MT mode by replacing hb_stack.Return with
      hb_stackReturnItem()

  * xharbour/source/vm/asort.c
    * use only API functions to manipulate items in sorted array

  * xharbour/source/vm/extend.c
    ! fixed compilation for MT mode by replacing hb_stack.Return with
      hb_stackReturnItem()
    * replace HB_VM_STACK.Return with hb_stackReturnItem() - by default
      hb_stackReturnItem() is a macro to HB_VM_STACK.Return so it will
      not cause any additional function call

  * xharbour/source/vm/hvm.c
    * casting for C++ compilation

2005-10-16 14:00 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    * added code page translation to SKIPRGEX

  * xharbour/source/rdd/dbfntx/dbfntx1.c
    * added code page translation to SKIPRGEX
    * added code page translation in ORDKEYADD/ORDKEYDEL

2005-10-16 11:00 UTC+0300 Pavel Tsarenko <tpe2@mail.ru>
  * source/rdd/dbfcdx/dbfcdx1.c
  * source/rdd/dbfntx/dbfntx1.c
    refreshed files missing in my last commit

2005-10-15 17:40 UTC-0800 Brian Hays <bhays at abacuslaw.com>
  * contrib/rdd_ads/ads1.c
   * plugged minor mem leak

2005-10-15 13:05 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfntx/dbfntx1.c
    ! fixed ordKeyVal() in shared mode
  * xharbour/source/rtl/langapi.c
    * added EOL at EOF

2005-10-15 11:30 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  + source/cgi/include/cgi.ch
  - source/cgi/tini.prg
  - source/cgi/tutil.prg
  * source/cgi/*