@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4470 2005/10/16 12:04:30 druzus Exp $
+ * $Id: ChangeLog,v 1.4471 2005/10/16 19:31:15 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-10-16 14:36 UTC-0800 Ron Pinkas <Ron in xHarbour.com>
+  * source/macro/macro.y
+    ! Fixed GPF Trap, s_iPending was not reset for new macro.
 
 2005-10-16 21:30 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
   * xharbour/source/rtl/hbserv.c
